--- a/tex/Figures/figpred.tex
+++ b/tex/Figures/figpred.tex
@@ -134,7 +134,7 @@
       yticklabel style={xshift=-.015in}, nodes near coords,
       point meta=explicit symbolic,
       table/meta=strain,      axis on top=false,
-      ymax=7.6,      xlabel={geometric mean of HA and NA \qdist },ylabel={CDC computed IRAT emergence score},xlabel style={yshift=-.1in},ylabel style={yshift=-.12in},
+      ymax=7.6,      xlabel={negative geometric mean of HA and NA \qdist },ylabel={CDC computed IRAT emergence score},xlabel style={yshift=-.1in},ylabel style={yshift=-.12in},
 %axis x line=bottom,
 %axis y line=left,
 ymin=2.65,
