--- a/tex/Figures/tabdata/total_seqs.tex
+++ b/tex/Figures/tabdata/total_seqs.tex
@@ -1,12 +1,20 @@
-\begin{tabular}{L{.7in}|L{1.55in}|L{.95in}}\hline
+\begin{tabular}{L{1in}|L{1.2in}|L{.95in}}\hline
 Database & Strain & No. of Sequences \\\hline
-NCBI& Influenza  H1N1  HA &17,894\\\hline
-NCBI& Influenza  H1N1  NA &16,637\\\hline
-NCBI& Influenza  H3N2  HA &18,265\\\hline
-NCBI& Influenza  H3N2  NA &14,699\\\hline
-GISAID& Influenza  H1N1  HA &1,528\\\hline
-GISAID& Influenza  H1N1  NA &1,490\\\hline
-GISAID& Influenza  H3N2  HA &13,975\\\hline
-GISAID& Influenza  H3N2  NA &13,811\\\hline
-Total & &98,299\\\hline
+NCBI& Influenza  H1N1 &17,894\\\hline
+NCBI& Influenza  H3N2 &14,699\\\hline
+GISAID& Influenza  H1N1  &43,611\\\hline
+GISAID& Influenza  H1N2  &	
+856\\\hline
+GISAID& Influenza  H3N2  &	
+77,598\\\hline
+GISAID& Influenza  H5N-  &	
+3,503\\\hline
+GISAID& Influenza  H7N-  &	
+1,399 \\\hline
+GISAID& Influenza  H9N2  &	
+304\\\hline
+GISAID& Influenza  H10N8  &	
+1\\\hline
+Total & &159,865\\\hline
+Total H1N1 + H3N2 & &153,802\\\hline
 \end{tabular}
