--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -27,8 +27,6 @@
 \def\authorc{Aaron Esser-Kahn}
 \def\authord{Ishanu Chattopadhyay}
 
-\def\addressf{Department of Computer Science, University of Chicago, IL, USA}
-\def\addressg{Committee on Computational and Applied Mathematics, University of Chicago, IL, USA}
 \def\addressa{Department of Medicine, University of Chicago, IL, USA}
 \def\addressb{Committee on Genetics, Genomics \& Systems Biology, University of Chicago, IL, USA}
 \def\addressc{Committee on Quantitative Methods in Social, Behavioral, and Health Sciences, University of Chicago, IL, USA}
@@ -42,18 +40,14 @@
 %###################################
 
 \title{\LARGE \TITLE}
-\author{\sffamily  \fontsize{10}{12}\selectfont   \authore$^{1,6}$,\authora$^{1,5}$,  \authorc$^{2,3}$, and \authord$^{1,4,7\bigstar}$\\                                                                
+\author{\sffamily  \fontsize{10}{12}\selectfont   \authore$^{1}$,\authora$^{1}$,  \authorc$^{2,3}$, and \authord$^{1,4,5\bigstar}$\\                                                                
 \vspace{10pt}                                                                   
 
 \sffamily  \fontsize{10}{12}\selectfont                                         
 $^{1}$\addressa\\   
 $^{2}$\addressd\\
 $^{3}$\addresse\\
-$^{4}$\addressc\\                                                                 
-$^{5}$\addressf\\                                                               
-$^{6}$\addressg\\
-$^{7}$\addressb
-
+$^{5}$\addressc                                                                 
 \vskip 1em                                                                      
 $^\bigstar$To whom correspondence should be addressed: e-mail: \texttt{ishanu@uchicago.edu}.}
 
@@ -61,7 +55,7 @@ $^\bigstar$To whom correspondence should be addressed: e-mail: \texttt{ishanu@uc
 \def\hcov{SARS-CoV-2\xspace}
 \def\RATG13{RaTG13\xspace}
 \def\Appendix{Appendix}
-\def\qnet{Qnet\xspace}
+\def\qnet{Enet\xspace}
 \def\enet{Emergenet\xspace}
 \def\erisk{E-risk\xspace}
 \def\qdist{E-distance\xspace}
