--- a/tex/Figures/tabdata/improvement_qnet.tex
+++ b/tex/Figures/tabdata/improvement_qnet.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{C{.5in}|C{.35in}|C{.7in}|C{0.35in}|C{0.35in}|C{0.4in}|C{0.35in}|C{0.35in}|C{0.4in}|C{0.35in}|C{0.35in}|C{0.4in}}
 \multicolumn{3}{c}{}&\multicolumn{3}{c}{Two decades}&\multicolumn{3}{|c}{One decade}&\multicolumn{3}{|c}{2015-2019}\\\hline
-Subtype & Gene & Hemisphere & WHO Error & Qnet Error & \% Improvement & WHO Error & Qnet Error & \% Improvement & WHO Error & Qnet Error & \% Improvement\\\hline
+Subtype & Gene & Hemisphere & WHO Error & \qnet Error & Improvement (\%) & WHO Error & \qnet Error & Improvement (\%) & WHO Error & \qnet Error &  Improvement (\%)\\\hline
 H1N1&HA& North &12.67&8.76&30.83&4.38&1.19&72.83&2.52&0.33&86.79\\\hline
 H1N1&HA& South &13.57&9.00&33.68&4.67&1.62&65.31&2.52&0.62&75.47\\\hline
 \rowcolor{lightgray}H1N1&HA&Average&13.12&8.88&32.25&4.53&1.40&69.07&2.52&0.48&81.13\\\hline
